--- a/docs/env.production.example
+++ b/docs/env.production.example
@@ -1,5 +1,11 @@
 APP_BASE_URL=https://www.xhihangule.com
 CLIENT_URL=https://www.xhihangule.com
+ALLOWED_ORIGINS=https://www.xhihangule.com,https://www.xhihangule.com
+
+# Required secrets in production
+JWT_SECRET=replace-with-strong-random-string
+JWT_REFRESH_SECRET=replace-with-strong-random-string
+MONGODB_URI=mongodb+srv://<user>:<password>@<cluster>/<db>?retryWrites=true&w=majority
 
 # Choose ONE provider. For Mailtrap SMTP testing (non-delivery to real inboxes):
 # SMTP_HOST=sandbox.smtp.mailtrap.io
